# GeometricAlgebraGenerator

./: 2d_pga.rs  2dpga.rs  4dpga.rs  Cargo.toml  README.md
ga_generator/: Cargo.toml
ga_generator/src/: lib.rs
geometric_algebra/: Cargo.toml
geometric_algebra/src/: ga.rs  lib.rs
geometric_algebra_proc_macro/: Cargo.toml
geometric_algebra_proc_macro/src/: lib.rs
src/: lib.rs  main.rs
