[workspace]
resolver = "3"
members = ["geometric_algebra"]

[workspace.dependencies]
geometric_algebra = { path = "./geometric_algebra", version = "0.1.0" }

[package]
name = "ga_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
geometric_algebra = { workspace = true }
syn = { version = "2.0.104", features = ["full"] }
