[workspace]
resolver = "3"
members = ["ga_generator"]
package.description = "A crate for generating geometric algebra equations for any algebra and dimension"
package.license = "MIT"
package.repository = "https://github.com/HomelikeBrick42/Thallium"

[workspace.dependencies]
ga_generator = { path = "./ga_generator", version = "0.1.0" }

[package]
name = "ga_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
ga_generator = { workspace = true }
